# modern-paste-rs

./: .gitignore  Cargo.toml
src/: config.rs  main.rs
templates/: base.html  macros.html
templates/error/: internal_server_error.html  not_found.html
templates/paste/: archive.html  nonexistent.html  post.html  view.html
web/scss/: stylesheet.scss
web/scss/elements/: _header.scss
web/scss/universal/: _base.scss  _colors.scss
